--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Site/Index.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Site/Index.cshtml
@@ -2,19 +2,9 @@
     Layout = "_LayoutColumn";
     ViewData["Title"] = "Home Page";
 }
-
-<p>
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec sed pede. Etiam ante purus, consectetuer id,bibendum fermentum, accumsan sed, nunc. Vestibulum dignissim, leo vel aliquam dignissim, nibh ligula cursus tortor,in vulputate neque lorem eu sem. Morbi nibh nulla, tempus ac, varius sed, porta sit amet, nulla. Proin laoreet.Phasellus quis tortor eu augue rutrum posuere. Suspendisse quis dolor vitae nisl fermentum rutrum. Etiam mi mauris,imperdiet sed, volutpat ac, ornare in, urna. Sed laoreet turpis nec sem. Nam consectetuer, tellus rhoncus laciniaeuismod, augue tellus consectetuer sem, a molestie tellus nisi a dolor. Nunc tempus ante sit amet arcu. Lorem ipsumdolor sit amet, consectetuer adipiscing elit. Aliquam vitae quam. Integer consectetuer lacinia ligula. Praesentadipiscing viverra libero.
-</p>
-<p>
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec sed pede. Etiam ante purus, consectetuer id,bibendum fermentum, accumsan sed, nunc. Vestibulum dignissim, leo vel aliquam dignissim, nibh ligula cursus tortor,in vulputate neque lorem eu sem. Morbi nibh nulla, tempus ac, varius sed, porta sit amet, nulla. Proin laoreet.Phasellus quis tortor eu augue rutrum posuere. Suspendisse quis dolor vitae nisl fermentum rutrum. Etiam mi mauris,imperdiet sed, volutpat ac, ornare in, urna. Sed laoreet turpis nec sem. Nam consectetuer, tellus rhoncus laciniaeuismod, augue tellus consectetuer sem, a molestie tellus nisi a dolor. Nunc tempus ante sit amet arcu. Lorem ipsumdolor sit amet, consectetuer adipiscing elit. Aliquam vitae quam. Integer consectetuer lacinia ligula. Praesentadipiscing viverra libero.
-</p>
-<p>
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec sed pede. Etiam ante purus, consectetuer id,bibendum fermentum, accumsan sed, nunc. Vestibulum dignissim, leo vel aliquam dignissim, nibh ligula cursus tortor,in vulputate neque lorem eu sem. Morbi nibh nulla, tempus ac, varius sed, porta sit amet, nulla. Proin laoreet.Phasellus quis tortor eu augue rutrum posuere. Suspendisse quis dolor vitae nisl fermentum rutrum. Etiam mi mauris,imperdiet sed, volutpat ac, ornare in, urna. Sed laoreet turpis nec sem. Nam consectetuer, tellus rhoncus laciniaeuismod, augue tellus consectetuer sem, a molestie tellus nisi a dolor. Nunc tempus ante sit amet arcu. Lorem ipsumdolor sit amet, consectetuer adipiscing elit. Aliquam vitae quam. Integer consectetuer lacinia ligula. Praesentadipiscing viverra libero.
-</p>
-<p>
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec sed pede. Etiam ante purus, consectetuer id,bibendum fermentum, accumsan sed, nunc. Vestibulum dignissim, leo vel aliquam dignissim, nibh ligula cursus tortor,in vulputate neque lorem eu sem. Morbi nibh nulla, tempus ac, varius sed, porta sit amet, nulla. Proin laoreet.Phasellus quis tortor eu augue rutrum posuere. Suspendisse quis dolor vitae nisl fermentum rutrum. Etiam mi mauris,imperdiet sed, volutpat ac, ornare in, urna. Sed laoreet turpis nec sem. Nam consectetuer, tellus rhoncus laciniaeuismod, augue tellus consectetuer sem, a molestie tellus nisi a dolor. Nunc tempus ante sit amet arcu. Lorem ipsumdolor sit amet, consectetuer adipiscing elit. Aliquam vitae quam. Integer consectetuer lacinia ligula. Praesentadipiscing viverra libero.
-</p>
+<p>Index: @ViewData["Index"]</p>
+<p>Tag: @ViewData["Tag"]</p>
+<p>Search: @ViewData["Search"]</p>
 
 @section Column
 {
