--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_Layout.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_Layout.cshtml
@@ -12,15 +12,12 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Site" asp-action="Index">Только факты</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Facts" asp-action="Index">Только факты</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Site" asp-action="Index">Home</a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Site" asp-action="Privacy">Privacy</a>
                         </li>
