Демонстрация простого TagHelper

--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Index.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Index.cshtml
@@ -6,6 +6,8 @@
 
 @if (Model is not null)
 {
+    <pager asp-text="GHBSKJHBADKJBDAS DAS D"></pager>
+
     foreach (var fact in Model.Result.Items)
     {
         <partial name="_Fact" model="fact" />
