--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_FactLink.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_FactLink.cshtml
@@ -1,3 +1,3 @@
 ﻿@model Guid
 
-<a asp-controller="Facts" asp-action="Fact" asp-route-id="@Model">Ссылка</a>
+<a asp-controller="Facts" asp-action="Show" asp-route-id="@Model">Ссылка</a>
