--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_Fact.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_Fact.cshtml
@@ -6,7 +6,7 @@
                 <div class="float-start">@Model.CreatedAt.ToString("d")</div>
             </div>
             <div class="col">
-                <div class="float-end"><partial name="_FactLink" model="Model.Id" /></div>
+                <div class="float-end"><partial name="_FactLink" model="Model.Id" view-data="ViewData" /></div>
             </div>
         </div>
     </div>
