--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_FactLink.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_FactLink.cshtml
@@ -5,5 +5,5 @@
 }
 else
 {
-    <a asp-controller="Facts" asp-action="Show" asp-route-id="@Model">Ссылка</a>
+    <a asp-controller="Facts" asp-action="Show" asp-route-id="@Model">Открыть</a>
 }
