--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_Tags.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_Tags.cshtml
@@ -2,7 +2,7 @@
 
 @foreach (var tag in Model)
 {
-    // Calabonga: WHAT I MADE 6
+    // Calabonga: WHAT I DID
     <a asp-controller="Facts" asp-action="Index" asp-route-tag="@tag.Name" 
        class="badge bg-light text-dark" style="text-decoration: none">@tag.Name</a>
 }
