--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_LoginPartial.cshtml
@@ -6,13 +6,21 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+        <a  class="nav-link text-dark" asp-controller="Administrator" asp-action="Index" title="Manage">Панель управления</a>
+    </li>
+    <li class="nav-item">
+        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Учетная запись</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Facts", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button  type="submit" class="nav-link btn btn-link text-dark">Выход</button>
         </form>
     </li>
 }
-
+else
+{
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login" asp-route-returnUrl="~/" title="вход для администратора">Вход</a>
+    </li>
+}
 </ul>
