Удалил метки WHAT I DID

--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Show.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Show.cshtml
@@ -1,4 +1,5 @@
-﻿@model Calabonga.OperationResults.OperationResult<Calabonga.Facts.Web.ViewModels.FactViewModel>
+﻿@using Calabonga.Facts.RazorLibrary
+@model Calabonga.OperationResults.OperationResult<Calabonga.Facts.Web.ViewModels.FactViewModel>
 
 @{
     Layout = "_Layout";
@@ -20,3 +21,10 @@
         }
     </div>
 </div>
+
+<component type="typeof(Component1)" render-mode="ServerPrerendered"/>
+
+@section Scripts
+{
+    <script src="_framework/blazor.server.js"></script>
+}
