--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_FactLink.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_FactLink.cshtml
@@ -1,8 +1,10 @@
 ﻿@using Calabonga.Facts.Web.Extensions
+@using Calabonga.Facts.RazorLibrary
 @model Guid
 @if (ViewData["HideLink"] is not null)
 {
-    <span>Скопировать ссылку</span>
+    <component type="typeof(FactLinkComponent)" render-mode="ServerPrerendered"
+              param-LinkValue="@Url.ActionLink("Show", "Facts", new {id = Model})" />
 }
 else
 {
