--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_Layout.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Calabonga.Facts.Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <base href="~/"/>
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="Shortcut Icon" href="~/favicon.ico" />
     @await RenderSectionAsync("Headers", required: false)
