--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Show.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Show.cshtml
@@ -21,10 +21,12 @@
         }
     </div>
 </div>
-
-<component type="typeof(Component1)" render-mode="ServerPrerendered"/>
-
+@section Headers
+{
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
+}
 @section Scripts
 {
     <script src="_framework/blazor.server.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 }
