--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_Layout.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                     <a class="nav-link" asp-controller="Site" asp-action="Feedback">Обратная связь</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Site" asp-action="Rss">RSS-канал фактов</a>
+                    <a class="nav-link" asp-controller="Facts" asp-action="Rss">RSS-канал фактов</a>
                 </li>
             </ul>
 
