--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Index.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Calabonga.OperationResults.OperationResult<Calabonga.UnitOfWork.IPagedList<Calabonga.Facts.Web.ViewModels.FactViewModel>>
 @{
     Layout = "_LayoutColumn";
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Только факты";
 }
 
 @if (Model is not null)
@@ -51,13 +51,8 @@
                 </span>
             </a>
         }
-
-
     </div>
-
-
 }
-
 
 @functions
 {
