--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_FactLink.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_FactLink.cshtml
@@ -8,5 +8,5 @@
 }
 else
 {
-    <a asp-controller="Facts" asp-action="Show" asp-route-id="@Model" asp-route-returnUrl="@Context.GetReturnUrl()">Открыть</a>
+    <a asp-controller="Facts" asp-action="Show" asp-route-id="@Model" asp-route-returnUrl="@Context.GetReturnUrl()#@Model">Открыть</a>
 }
