--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_Layout.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Calabonga.Facts.Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <base href="~/" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="Shortcut Icon" href="~/favicon.ico" />
@@ -52,7 +53,7 @@
                 </li>
             </ul>
             <div class="small text-center mt-4">
-                &copy; 2021 - <a class="link-secondary" style="text-decoration: none" href="https://www.calabonga.net">Calabonga SOFT</a>
+                2011-@DateTime.Today.Year &copy; <a class="link-secondary" style="text-decoration: none" href="https://www.calabonga.net">Calabonga SOFT</a>
             </div>
             <environment exclude="Development">
                 <div class="text-center">
