--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_Fact.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_Fact.cshtml
@@ -1,12 +1,15 @@
 ﻿@model Calabonga.Facts.Web.ViewModels.FactViewModel
-<div class="card my-3">
+<div class="card my-3" id="@Model.Id">
     <div class="card-header">
         <div class="row">
             <div class="col">
                 <div class="float-start">@Model.CreatedAt.ToString("d")</div>
             </div>
             <div class="col">
-                <div class="float-end"><partial name="_FactLink" model="Model.Id" view-data="ViewData" /></div>
+                <div class="float-end">
+                    <partial name="_FactActions" model="Model.Id" />
+                    <partial name="_FactLink" model="Model.Id" view-data="ViewData" />
+                </div>
             </div>
         </div>
     </div>
