--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/_ViewImports.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Calabonga.Facts.Web
+@using Calabonga.OperationResults
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Calabonga.Facts.Web
