--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Edit.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Edit.cshtml
@@ -10,8 +10,6 @@
         {
             <form id="fact-editor" asp-action="Edit" asp-controller="Facts" Method="post" asp-antiforgery="true" asp-route-returnurl="@Model.ReturnUrl">
 
-                <div asp-validation-summary="All" class="text-danger"></div>
-
                 <input type="hidden" asp-for="@Model.Id" />
                 <input asp-for="TotalTags" type="hidden" value="@Model.Tags?.Count" />
                 <input type="hidden" asp-for="@Model.ReturnUrl" />
@@ -35,17 +33,16 @@
                 </div>
                 @if (Model.Tags != null)
                 {
-                    <label asp-for="TotalTags"></label>
                     <component type="typeof(TagsEditorComponent)" render-mode="ServerPrerendered"
                                param-Tags="@Model.Tags" />
                     <br />
                     <span asp-validation-for="TotalTags" class="text-danger"></span>
-                }
+                } 
 
-                <p class="">
+                <div class="my-5">
                     <button type="submit" class="btn btn-outline-primary">Сохранить</button>
                     <a class="btn btn-outline-secondary" href="@Url.Content(Model.ReturnUrl)">Отмена</a>
-                </p>
+                </div>
 
             </form>
         }
