Добавлена информация о бранче и версии

--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_Layout.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
             </ul>
             <div class="small text-center mt-4">
                 2011-@DateTime.Today.Year &copy; <a class="link-secondary" style="text-decoration: none" href="https://www.calabonga.net">Calabonga SOFT</a>
+                <partial name="_Version" />
             </div>
             <environment exclude="Development">
                 <div class="text-center">
