--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Random.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Random.cshtml
@@ -1,4 +1,4 @@
-﻿@model Calabonga.Facts.Web.ViewModels.FactViewModel
+﻿@model Calabonga.Facts.Contracts.FactViewModel
 @{
     ViewData["Title"] = "Слуйчайный факт";
     ViewData["HideLink"] = true;
