--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Show.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Show.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Calabonga.Facts.RazorLibrary
-@model Calabonga.OperationResults.OperationResult<Calabonga.Facts.Web.ViewModels.FactViewModel>
+@model Calabonga.OperationResults.OperationResult<Calabonga.Facts.Contracts.FactViewModel>
 
 @{
     Layout = "_Layout";
