--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_Tags.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_Tags.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Calabonga.Facts.Web.ViewModels.TagViewModel>
+﻿@model IEnumerable<Calabonga.Facts.Contracts.TagViewModel>
 
 @foreach (var tag in Model)
 {
