--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Index.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model Calabonga.OperationResults.OperationResult<Calabonga.UnitOfWork.IPagedList<Calabonga.Facts.Web.ViewModels.FactViewModel>>
+﻿@using Calabonga.Facts.Web.Infrastructure
+@model Calabonga.OperationResults.OperationResult<Calabonga.UnitOfWork.IPagedList<Calabonga.Facts.Contracts.FactViewModel>>
 @{
     Layout = "_LayoutColumn";
     ViewData["Title"] = "Только факты";
@@ -52,6 +53,12 @@
             </a>
         }
     </div>
+    @if (User.IsInRole(AppData.AdministratorRoleName))
+    {
+        <div class="mt-3">
+            <a asp-controller="Facts" asp-action="Add" class="btn btn-primary">Добавить</a>
+        </div>
+    }
 }
 
 @functions
