--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_Fact.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/_Fact.cshtml
@@ -1,4 +1,4 @@
-﻿@model Calabonga.Facts.Web.ViewModels.FactViewModel
+﻿@model Calabonga.Facts.Contracts.FactViewModel
 <div class="card my-3" id="@Model.Id">
     <div class="card-header">
         <div class="row">
