Обновились пакеты а также небольшая правка по тегам

--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Cloud.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Facts/Cloud.cshtml
@@ -2,6 +2,6 @@
     ViewData["Title"] = "Облако меток";
 }
 
-<cache expires-sliding="TimeSpan.FromSeconds(30)">
     <vc:cloud />
-</cache>
+@*<cache expires-sliding="TimeSpan.FromSeconds(30)">
+</cache>*@
