Просмотр факта в виде картинки (png)

--- a/src/Calabonga.Facts/Calabonga.Facts.RazorLibrary/FactLinkComponent.razor
+++ b/src/Calabonga.Facts/Calabonga.Facts.RazorLibrary/FactLinkComponent.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.JSInterop
-<span @onclick="(_ => CopyToClipboard(LinkValue))" title ="Скопироваться ссылку на факт">Ссылка</span>
+<span class="btn btn-link" @onclick="_ => CopyToClipboard(LinkValue)" title ="Скопироваться ссылку на факт">Скопировать ссылку</span>
 
 @code {
 
