--- a/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_Layout.cshtml
+++ b/src/Calabonga.Facts/Calabonga.Facts.Web/Views/Shared/_Layout.cshtml
@@ -82,5 +82,6 @@
     </environment>
 
     @await RenderSectionAsync("Scripts", required: false)
+    <script data-ad-client="ca-pub-1232619337775173" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
